Prevent stars from wrapping on multiple lines.

--- a/bookwyrm/static/css/bookwyrm.css
+++ b/bookwyrm/static/css/bookwyrm.css
@@ -85,6 +85,13 @@ body {
     }
 }
 
+/** Stars
+ ******************************************************************************/
+
+.stars {
+    white-space: nowrap;
+}
+
 /** Stars in a review form
  *
  * Specificity makes hovering taking over checked inputs.
